--- a/index.html
+++ b/index.html
@@ -51,18 +51,12 @@
       </div>
     </div>
     <div id="unity-warning"> </div>
-    <!-- <div id="unity-footer">
-      <div id="unity-webgl-logo"></div>
-      <div id="unity-fullscreen-button"></div>
-      <div id="unity-build-title">Grape</div>
-    </div> -->
   </div>
   <script>
     var container = document.querySelector("#unity-container");
     var canvas = document.querySelector("#unity-canvas");
     var loadingBar = document.querySelector("#unity-loading-bar");
     var progressBarFull = document.querySelector("#unity-progress-bar-full");
-    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
     var warningBanner = document.querySelector("#unity-warning");
 
     function unityShowBanner(msg, type) {
@@ -115,9 +109,16 @@
         progressBarFull.style.width = 100 * progress + "%";
       }).then((unityInstance) => {
         loadingBar.style.display = "none";
-        fullscreenButton.onclick = () => {
-          unityInstance.SetFullscreen(1);
-        };
+
+        // 以下のコードを安全に無効化
+        // fullscreenButton が削除されたため、エラーを防ぐ
+        /*
+        if (fullscreenButton) {
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }
+        */
       }).catch((message) => {
         alert(message);
       });
