--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Unity WebGL Player | Grape</title>
-  <link rel="shortcut icon" href="TemplateData/favicon.ico">
+  <title>Grape</title>
+  <link rel="shortcut icon" href="TemplateData/icon_2.png">
   <link rel="stylesheet" href="TemplateData/style.css">
   <style>
     html,
@@ -13,9 +13,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      /* スクロールバーを隠す */
       height: 100%;
-      /* ページ全体の高さを確保 */
     }
 
     #unity-container {
@@ -38,6 +36,50 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
+
+    #toggle-button {
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+      width: 40px;
+      height: 40px;
+      background-color: #23232300;
+      color: white;
+      border: 0px solid #ffffff;
+      font-size: large;
+      /* 枠線を追加 */
+      border-radius: 50%;
+      cursor: pointer;
+      z-index: 1000;
+    }
+
+    #table-container {
+      display: none;
+      position: fixed;
+      bottom: 50px;
+      left: 10px;
+      background-color: white;
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 5px;
+      z-index: 999;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: auto;
+    }
+
+    table th,
+    table td {
+      border: 1px solid #ccc;
+      padding: 5px;
+      text-align: left;
+    }
+
+    table th {
+      background-color: #f4f4f4;
+    }
   </style>
 </head>
 
@@ -52,6 +94,87 @@
     </div>
     <div id="unity-warning"> </div>
   </div>
+
+  <!-- 表示切り替えボタン -->
+  <button id="toggle-button">?</button>
+
+  <!-- 表コンテナ -->
+  <div id="table-container">
+    <table>
+      <thead>
+        <tr>
+          <th>アクション</th>
+          <th>操作</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            チャンネルノードを作る<br>
+            Create a Channel Node
+          </td>
+          <td>
+            画面中央下の【⊕ボタン】をクリック<br>
+            Click the ⊕ button at the bottom center of the screen
+          </td>
+        </tr>
+        <tr>
+          <td>
+            チャンネルに参加／離脱する<br>
+            Join/Leave a Channel
+          </td>
+          <td>
+            【チャンネルノード】をダブルクリック<br>
+            Double-click the Channel Node
+          </td>
+        </tr>
+        <tr>
+          <td>
+            チャンネルへの参与の程度を上げる／下げる<br>
+            Increase/Decrease the Degree of Participation in the Channel
+          </td>
+          <td>
+            【チャンネルノード】を選択した状態（黄色いハイライトリングがある状態）でホイール／トラックパッドを操作<br>
+            Operate the wheel/trackpad while the Channel Node is selected (indicated by a yellow highlight ring)
+          </td>
+        </tr>
+        <tr>
+          <td>
+            メインチャンネルとして登録／解除する<br>
+            Register/Unregister as the Main Channel
+          </td>
+          <td>
+            参加状態の【チャンネルノード】を Ctrl/Cmd + ダブルクリック もしくは 右ダブルクリック<br>
+            Ctrl/Cmd + double-click or right double-click the participating Channel Node
+          </td>
+        </tr>
+        <tr>
+          <td>
+            チャンネルノードの位置を整理する<br>
+            Organize the Position of Channel Nodes
+          </td>
+          <td>
+            【チャンネルノード】をドラッグ＆ドロップ．もしくは画面右下の【…ボタン:X座標順】or【123ボタン:番号順】をクリック<br>
+            Drag and drop the Channel Node, or click the 【…Button: X-coordinate order】 or 【123 Button: Number order】 at
+            the bottom right of the screen
+          </td>
+        </tr>
+        <tr>
+          <td>
+            表示する名前を変える<br>
+            Change the Display Name
+          </td>
+          <td>
+            右上の【ペンボタン】を押して編集．日本語不可．氏名を半角スペースで区切るとユーザノードにイニシャルを表示<br>
+            Press the 【Pen Button】 at the top right to edit. Separate first and last names with
+            a space to display initials on the User Node
+          </td>
+        </tr>
+      </tbody>
+
+    </table>
+  </div>
+
   <script>
     var container = document.querySelector("#unity-container");
     var canvas = document.querySelector("#unity-canvas");
@@ -109,16 +232,6 @@
         progressBarFull.style.width = 100 * progress + "%";
       }).then((unityInstance) => {
         loadingBar.style.display = "none";
-
-        // 以下のコードを安全に無効化
-        // fullscreenButton が削除されたため、エラーを防ぐ
-        /*
-        if (fullscreenButton) {
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
-        }
-        */
       }).catch((message) => {
         alert(message);
       });
@@ -132,6 +245,21 @@
     });
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
+
+    // ボタンとテーブルコンテナを取得
+    const toggleButton = document.getElementById('toggle-button');
+    const tableContainer = document.getElementById('table-container');
+
+    // ボタンクリック時の処理
+    toggleButton.addEventListener('click', () => {
+      if (tableContainer.style.display === 'none') {
+        tableContainer.style.display = 'block';
+        toggleButton.textContent = '×';
+      } else {
+        tableContainer.style.display = 'none';
+        toggleButton.textContent = '?';
+      }
+    });
   </script>
 </body>
 
