--- a/index.html
+++ b/index.html
@@ -112,32 +112,27 @@
         <tr>
           <td>チャンネルノードを作る</td>
           <td>画面中央下の【⊕ボタン】をクリック</td>
-          <td>画面中央のレーンに番号付きのチャンネルノードが出現</td>
+          <td>通し番号付きのチャンネルノードが出現</td>
         </tr>
         <tr>
           <td>チャンネルに参加／離脱する</td>
           <td>【チャンネルノード】をダブルクリック</td>
-          <td>半透明のエッジが自身のユーザノードとチャンネルノードを接続．</td>
+          <td>半透明のエッジがユーザノードとチャンネルノードを接続</td>
         </tr>
         <tr>
-          <td>チャンネルへの参与の程度を上げる／下げる</td>
-          <td>【チャンネルノード】を選択した状態（黄色いハイライトリングがある状態）でホイール／トラックパッドを操作</td>
-          <td>エッジ幅が太くなったり，細くなったりする．</td>
+          <td>参与の程度を上げる／下げる</td>
+          <td>1. 【チャンネルノード】をクリック<br>2. マウスホイール／タッチパッドをスクロール</td>
+          <td>1. 黄色いハイライトリングが出現<br>2. エッジの線幅が変化</td>
         </tr>
         <tr>
           <td>メインチャンネルとして登録／解除する</td>
-          <td>参加状態の【チャンネルノード】を Ctrl/Cmd + ダブルクリック もしくは 右ダブルクリック</td>
-          <td>エッジの色が不透明になり，ユーザノードが該当チャンネルの直下に移動する．なおメインチャンネルが未登録のときは，最も太いエッジで接続されたチャンネルの直下に移動する．</td>
-        </tr>
-        <tr>
-          <td>チャンネルノードの位置を整理する</td>
-          <td>【チャンネルノード】をドラッグ＆ドロップ．もしくは画面右下の【…ボタン:X座標順】or【123ボタン:番号順】をクリック．</td>
-          <td>画面上のノードが整頓される．ノードの位置はユーザ間で同期していない．</td>
+          <td>参加状態の【チャンネルノード】を Ctrl/Cmd + クリック<br>(Windowsのみ右ダブルクリックを可)</td>
+          <td>ユーザノードとエッジが不透明に色付き，<br>ユーザノードが該当チャンネルの直下に移動する</td>
         </tr>
         <tr>
           <td>表示する名前を変える</td>
-          <td>右上の【ペンボタン】を押して編集．日本語不可．</td>
-          <td>ユーザノードのラベルが更新され，半角スペースで区切られたイニシャルを表示する．</td>
+          <td>右上の【ペンボタン】を押して編集（日本語不可）</td>
+          <td>ユーザノードのラベルが更新される</td>
         </tr>
       </tbody>
     </table>
