--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Grape</title>
-  <link rel="shortcut icon" href="TemplateData/icon_2.png">
+  <title>Grape Demo</title>
+  <link rel="shortcut icon" href="TemplateData/favicon.svg">
   <link rel="stylesheet" href="TemplateData/style.css">
   <style>
     html,
@@ -122,11 +122,11 @@
         <tr>
           <td>参与の程度を上げる／下げる</td>
           <td>1. 【チャンネルノード】をクリック<br>2. マウスホイール／タッチパッドをスクロール</td>
-          <td>1. 黄色いハイライトリングが出現<br>2. エッジの線幅が変化</td>
+          <td>1. ハイライトリングが出現<br>2. エッジの線幅が変化</td>
         </tr>
         <tr>
           <td>メインチャンネルとして登録／解除する</td>
-          <td>参加状態の【チャンネルノード】を Ctrl/Cmd + クリック<br>(Windowsのみ右ダブルクリックを可)</td>
+          <td>参加状態の【チャンネルノード】を Ctrl/Cmd + クリック<br>(Windowsのみ右ダブルクリックも可)</td>
           <td>ユーザノードとエッジが不透明に色付き，<br>ユーザノードが該当チャンネルの直下に移動する</td>
         </tr>
         <tr>
