--- a/index.html
+++ b/index.html
@@ -122,11 +122,16 @@
         <tr>
           <td>参与の程度を上げる／下げる</td>
           <td>1. 【チャンネルノード】をクリック<br>2. マウスホイール／タッチパッドをスクロール</td>
-          <td>1. ハイライトリングが出現<br>2. エッジの線幅が変化</td>
+          <td>1. 黄色のハイライトリングが出現<br>2. エッジの線幅が変化</td>
+        </tr>
+        <tr>
+          <td>マイクをON／OFFにする</td>
+          <td>【チャンネルノード】を右クリック<br>(もしくはCtrl + クリック)</td>
+          <td>緑色のハイライトリングが出現し，<br>エッジアニメーション方向が反転</td>
         </tr>
         <tr>
           <td>メインチャンネルとして登録／解除する</td>
-          <td>参加状態の【チャンネルノード】を Ctrl/Cmd + クリック<br>(Windowsのみ右ダブルクリックも可)</td>
+          <td>参加状態の【チャンネルノード】を Ctrl/Cmd + ダブルクリック<br>(Windowsのみ右ダブルクリックも可)</td>
           <td>ユーザノードとエッジが不透明に色付き，<br>ユーザノードが該当チャンネルの直下に移動する</td>
         </tr>
         <tr>
