--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Grape Demo</title>
-  <link rel="shortcut icon" href="TemplateData/favicon.svg">
+  <link rel="shortcut icon" href="TemplateData/icon_2.png">
   <link rel="stylesheet" href="TemplateData/style.css">
   <style>
     html,
