--- a/index.html
+++ b/index.html
@@ -4,14 +4,88 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Unity WebGL Player | Grape</title>
-  <link rel="shortcut icon" href="icon_2.png">
+  <title>Grape Demo</title>
+  <link rel="shortcut icon" href="favicon.svg">
   <link rel="stylesheet" href="TemplateData/style.css">
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      height: 100%;
+    }
+
+    #unity-container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+
+    #unity-canvas {
+      width: 100%;
+      height: 100%;
+    }
+
+    #unity-loading-bar {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    #toggle-button {
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+      width: 40px;
+      height: 40px;
+      background-color: #23232300;
+      color: white;
+      border: 0px solid #ffffff;
+      font-size: large;
+      /* 枠線を追加 */
+      border-radius: 50%;
+      cursor: pointer;
+      z-index: 1000;
+    }
+
+    #table-container {
+      display: none;
+      position: fixed;
+      bottom: 50px;
+      left: 10px;
+      background-color: white;
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 5px;
+      z-index: 999;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: auto;
+    }
+
+    table th,
+    table td {
+      border: 1px solid #ccc;
+      padding: 5px;
+      text-align: left;
+    }
+
+    table th {
+      background-color: #f4f4f4;
+    }
+  </style>
 </head>
 
 <body>
   <div id="unity-container" class="unity-desktop">
-    <canvas id="unity-canvas" width=960 height=600></canvas>
+    <canvas id="unity-canvas"></canvas>
     <div id="unity-loading-bar">
       <div id="unity-logo"></div>
       <div id="unity-progress-bar-empty">
@@ -19,26 +93,63 @@
       </div>
     </div>
     <div id="unity-warning"> </div>
-    <div id="unity-footer">
-      <div id="unity-webgl-logo"></div>
-      <div id="unity-fullscreen-button"></div>
-      <div id="unity-build-title">Grape</div>
-    </div>
   </div>
+
+  <!-- 表示切り替えボタン -->
+  <button id="toggle-button">?</button>
+
+  <!-- 表コンテナ -->
+  <div id="table-container">
+    <table>
+      <thead>
+        <tr>
+          <th>アクション</th>
+          <th>操作</th>
+          <th>結果</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>チャンネルノードを作る</td>
+          <td>画面中央下の【⊕ボタン】をクリック</td>
+          <td>通し番号付きのチャンネルノードが出現</td>
+        </tr>
+        <tr>
+          <td>チャンネルに参加／離脱する</td>
+          <td>【チャンネルノード】をダブルクリック</td>
+          <td>半透明のエッジがユーザノードとチャンネルノードを接続</td>
+        </tr>
+        <tr>
+          <td>参与の程度を上げる／下げる</td>
+          <td>1. 【チャンネルノード】をクリック<br>2. マウスホイール／タッチパッドをスクロール</td>
+          <td>1. 黄色のハイライトリングが出現<br>2. エッジの線幅が変化</td>
+        </tr>
+        <tr>
+          <td>マイクをON／OFFにする</td>
+          <td>【チャンネルノード】を右クリック<br>(もしくはCtrl + クリック)</td>
+          <td>緑色のハイライトリングが出現し，<br>エッジアニメーション方向が反転</td>
+        </tr>
+        <tr>
+          <td>メインチャンネルとして登録／解除する</td>
+          <td>参加状態の【チャンネルノード】を Ctrl/Cmd + ダブルクリック<br>(Windowsのみ右ダブルクリックも可)</td>
+          <td>ユーザノードとエッジが不透明に色付き，<br>ユーザノードが該当チャンネルの直下に移動する</td>
+        </tr>
+        <tr>
+          <td>表示する名前を変える</td>
+          <td>右上の【ペンボタン】を押して編集（日本語不可）</td>
+          <td>ユーザノードのラベルが更新される</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
   <script>
     var container = document.querySelector("#unity-container");
     var canvas = document.querySelector("#unity-canvas");
     var loadingBar = document.querySelector("#unity-loading-bar");
     var progressBarFull = document.querySelector("#unity-progress-bar-full");
-    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
     var warningBanner = document.querySelector("#unity-warning");
 
-    // Shows a temporary message banner/ribbon for a few seconds, or
-    // a permanent error message on top of the canvas if type=='error'.
-    // If type=='warning', a yellow highlight color is used.
-    // Modify or remove this function to customize the visually presented
-    // way that non-critical warnings and error messages are presented to the
-    // user.
     function unityShowBanner(msg, type) {
       function updateBannerVisibility() {
         warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
@@ -70,33 +181,14 @@
       showBanner: unityShowBanner,
     };
 
-    // By default, Unity keeps WebGL canvas render target size matched with
-    // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-    // Set this to false if you want to decouple this synchronization from
-    // happening inside the engine, and you would instead like to size up
-    // the canvas DOM size and WebGL render target sizes yourself.
-    // config.matchWebGLToCanvasSize = false;
-
     if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-      // Mobile device style: fill the whole browser client area with the game canvas:
-
       var meta = document.createElement('meta');
       meta.name = 'viewport';
       meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
       document.getElementsByTagName('head')[0].appendChild(meta);
       container.className = "unity-mobile";
       canvas.className = "unity-mobile";
-
-      // To lower canvas resolution on mobile devices to gain some
-      // performance, uncomment the following line:
-      // config.devicePixelRatio = 1;
-
       unityShowBanner('WebGL builds are not supported on mobile devices.');
-    } else {
-      // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-      canvas.style.width = "960px";
-      canvas.style.height = "600px";
     }
 
     loadingBar.style.display = "block";
@@ -108,14 +200,33 @@
         progressBarFull.style.width = 100 * progress + "%";
       }).then((unityInstance) => {
         loadingBar.style.display = "none";
-        fullscreenButton.onclick = () => {
-          unityInstance.SetFullscreen(1);
-        };
       }).catch((message) => {
         alert(message);
       });
     };
     document.body.appendChild(script);
+
+    // Canvas のサイズをウィンドウサイズに合わせる
+    window.addEventListener('resize', () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    const toggleButton = document.getElementById('toggle-button');
+    const tableContainer = document.getElementById('table-container');
+
+    // 初期状態を明示的に設定
+    tableContainer.style.display = 'none'; // テーブル非表示
+    toggleButton.textContent = '?'; // ボタンの初期表示
+
+    // ボタンクリック時の処理
+    toggleButton.addEventListener('click', () => {
+      const isHidden = tableContainer.style.display === 'none';
+      tableContainer.style.display = isHidden ? 'block' : 'none'; // 表示切り替え
+      toggleButton.textContent = isHidden ? '×' : '?'; // ボタンテキスト更新
+    });
   </script>
 </body>
 
